# ProyectoProgra3_Chavez_PaginaRecomendacionDePelas

./: CMakeLists.txt  README.md
data/: users.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/api/: auth.js  movies.js
frontend/src/components/: AuthForm.js  MovieItem.js  MovieList.js  SearchBar.js  Sidebar.js
frontend/src/pages/: HomePage.js  SearchPage.js
frontend/src/styles/: App.css  AuthForm.css  HomePage.css  MovieItem.css  MovieList.css  SearchBar.css  SearchPage.css  Sidebar.css
include/: authentication.h  endpoints.h  globals.h  movie.h  movie_database.h  observer.h  recommendation_factory.h  recommendation_system.h  search_engine.h  session_user.h  trie.h  user.h
src/: authentication.cpp  endpoints.cpp  globals.cpp  movie.cpp  movie_database.cpp  recommendation_factory.cpp  recommendation_system.cpp  search_engine.cpp  server.cpp  trie.cpp  user.cpp
